--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">آموزشی</string>
+    <string name="app_name">دریای مهر من</string>
     <string name="waiting">لطفا منتظر بمانيد&#8230;</string>
     <string name="warning">توجه!!!</string>
     <string name="ok">بله</string>
